07-istio/outlierdetection/app-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp
spec:
  host: myapp
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveErrors: 10
      interval: 5m
      baseEjectionTime: 15m
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
